# hyperchain

./: .gitignore  Architecture.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.markdown  README.md  SECURITY.markdown  SECURITY.md  cert.pem  config.toml  deploy.sh  docker-compose.yml  header.tex  integrate_isnm.sh  key.pem  keypair.txt  mining_rig_config.toml  p2p_identity.key  peer_cache.json  private_key.txt  simple.md  sync_wallet.sh  update-tlmgr-latest.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  rust-clippy.yml  rust.yml
deployment/: deploy_node.sh  startup-script.sh
deployment/templates/: config.testnet.toml
docs/: hyperchain-whitepaper.md  saga_model_training.md  security-audit-plan.md  testnet-plan.md
docs/whitepaper/: hyperchain-whitepaper.md
docs/whitepaper/assets/diagrams/: consensus.mmd  hyperchain_advanced_comparison.mmd  hyperchain_solution_overview.mmd  hyperdag.mmd
hyperdag_db/: IDENTITY  LOG  LOG.old.1749057310171980  LOG.old.1749057580305803  LOG.old.1749057581524699  LOG.old.1749058409270996  LOG.old.1749058410490105  LOG.old.1749058792707054  LOG.old.1749058793925852  LOG.old.1749059000458965  LOG.old.1749059001677625  LOG.old.1749059563185838  LOG.old.1749062546337693  LOG.old.1749064156228640  LOG.old.1749065008522474  LOG.old.1749065408493501  LOG.old.1749066244100373  LOG.old.1749066273916837  LOG.old.1749066849044449  LOG.old.1749067809484768  LOG.old.1749067820601167  LOG.old.1749147798553609  LOG.old.1749148529964933  LOG.old.1749152830259149  LOG.old.1749153506546707  LOG.old.1749253343877851  LOG.old.1749256647781961  LOG.old.1749257654172971  LOG.old.1749304776815158  MANIFEST-000093
myblockchain/: Cargo.toml
myblockchain/benches/: blockchain_benchmarks.rs
myblockchain/src/: lib.rs
node1/: .gitignore  cert.pem  hyperdg_testnet.rs  main.rs  node1_config.toml  p2p_identity.key  wallet.key
node1/hyperdag_db/: IDENTITY  LOG  LOG.old.1749066694730501  LOG.old.1749067213479702  LOG.old.1749070811353071  LOG.old.1749070855211051  LOG.old.1749106941464621  LOG.old.1749106973709755  LOG.old.1749127210978480  LOG.old.1749145342523414  LOG.old.1749148717491679  LOG.old.1749154214115404  LOG.old.1749154453252077  LOG.old.1749258323493908  LOG.old.1749258479356225  LOG.old.1749259000903507  LOG.old.1749259353657050  LOG.old.1749259574579752  LOG.old.1749259662268355  LOG.old.1749259694637205  LOG.old.1749263529594824  LOG.old.1749357773409730  MANIFEST-000081  MANIFEST-000089
node2/: hyperdg_testnet.rs  key.pem  main.rs  node2_config.toml  p2p_identity.key  private_key.txt
node2/hyperdag_db/: IDENTITY  LOG  LOG.old.1749066695603720  LOG.old.1749067214354890  LOG.old.1749106947436053  LOG.old.1749106974699261  LOG.old.1749127211548004  LOG.old.1749145344248770  LOG.old.1749148720094004  LOG.old.1749154215654167  LOG.old.1749154454458196  LOG.old.1749259504629041  LOG.old.1749259698293107  LOG.old.1749263530190971  MANIFEST-000053  MANIFEST-000057
node2/src/: cargo.toml
node3/: .gitignore  hyperdg_testnet.rs  main.rs  node3_config.toml  p2p_identity.key
node3/hyperdag_db/: IDENTITY  LOG.old.1749067215483145  LOG.old.1749106954765078  LOG.old.1749106975761159  LOG.old.1749127214410534  LOG.old.1749145345784867  LOG.old.1749148722681753  LOG.old.1749154455828584  LOG.old.1749259636853014  LOG.old.1749259698887122  LOG.old.1749263531217636  LOG.old.1749263709462062  LOG.old.1749357660948571  LOG.old.1749357776649696
patches/getrandom/: Cargo.toml  lib.rs
scripts/: generate_emission_chart.py
src/: block.rs  config.rs  consensus.rs  emission.rs  hyperdag.rs  hyperdag.rs.test  hyperdag_testnet.rs  infinite_strata_node.rs  integration.rs  keygen.rs  lib.rs  main.rs  mempool.rs  miner.rs  miner_old.rs  mining_kernel.cl  node.rs  omega.rs  p2p.rs  saga.rs  transaction.rs  wallet.rs  x_phyrus.rs  zk.rs  zk_old.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/hyperweb/: index.html
web/monitor/src/: App.jsx
web/src/: App.css  App.jsx  index.css
web/src/components/: Dashboard.jsx  MiningGuide.jsx
