[package]
name = "hyperchain"
version = "0.2.1" 
edition = "2021"
authors = ["Trevor <thieuquangphu@icloud.com>"]
description = "A decentralized blockchain network with advanced P2P and cryptographic features"
license = "MIT"

[dependencies]
# Core blockchain and networking
# NOTE: The 'noise' feature requires openssl
libp2p = { version = "0.55.0", features = ["tcp", "tokio", "noise", "gossipsub", "yamux", "mdns", "macros", "identify", "ping", "kad"] }
futures = "0.3.31"
tokio = { version = "1.45.0", features = ["full", "test-util","rt-multi-thread", "time"] }
axum = { version = "0.7.9", features = ["macros"] }
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"] }
reqwest = { version = "0.12.8", features = ["json"] }
tower-http = { version = "0.6.4", features = ["cors"] }

# Cryptography and security
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
sha3 = "0.10.8"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
rand = "0.8.5"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
bip39 = "2.1.0"
zeroize = "1.8.1"
subtle = "2.6.1"
protobuf = "3.7.2"
openssl = { version = "0.10.66", features = ["vendored"] }

# Serialization and configuration
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
serde_bytes = "0.11.15"
toml = "0.8.19"

# Logging, metrics, and tracing
log = "0.4.22"
env_logger = "0.11.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prometheus = { version = "0.13.4", default-features = false, features = ["process"] }

# Utilities and performance
chrono = "0.4.38"
sysinfo = "0.32.0"
lru = "0.12.5"
rayon = "1.10.0"
zstd = "0.13.2"
rocksdb = "0.22.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
dashmap = "6.0.1"
regex = "1.10.6"
nalgebra = "0.33.0"
url = "2.5.2"

# Error handling and CLI
thiserror = "1.0.69"
anyhow = "1.0.89"
clap = { version = "4.5.38", features = ["derive"] }

# Rate limiting and backoff
governor = "0.10.0"
nonzero_ext = "0.3.0"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }

# Environment and secrets
dotenvy = "0.15.7"
rpassword = "7.2.0"

# Async traits
async-trait = "0.1.83"
tokio-util = "0.7.12"

# Optional dependencies for ZK proofs and GPU
bellman = { version = "0.14.0", optional = true }
bls12_381 = { version = "0.8.0", optional = true }
ocl = { version = "0.19.6", optional = true }

[features]
default = []
gpu = ["ocl"]
zk = ["bellman", "bls12_381"]

[lib]
name = "hyperdag"
path = "src/lib.rs"

[[bin]]
name = "hyperdag"
path = "src/main.rs"

[[bin]]
name = "Hyperwallet"
path = "src/bin/Hyperwallet.rs"

[[bin]]
name = "import_wallet"
path = "src/bin/import_wallet.rs"

[[bin]]
name = "start_node"
path = "src/bin/start_node.rs"

[[bin]]
name = "hyperdag_testnet"
path = "src/hyperdag_testnet.rs"

[[bin]]
name = "keygen"
path = "src/keygen.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[[bin]]
name = "hyperdag_node1"
path = "node1/main.rs"

[[bin]]
name = "hyperdag_node2"
path = "node2/main.rs"

[[bin]]
name = "hyperdag_node3"
path = "node3/main.rs"



