[package]
name = "hyperchain"
version = "0.2.1"
edition = "2021"
authors = ["Trevor <thieuquangphu@icloud.com>"]
description = "A decentralized blockchain network with advanced P2P and cryptographic features"
license = "MIT"

[dependencies]
# Core blockchain and networking
libp2p = { version = "0.53.2", features = ["tcp", "tokio", "noise", "gossipsub", "yamux", "mdns", "macros", "identify", "ping", "kad"] }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full", "test-util","rt-multi-thread", "time"] }
axum = { version = "0.6.20", features = ["macros"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
reqwest = { version = "0.11.20", features = ["json"] }
tower-http = { version = "0.4.4", features = ["cors"] }
anyhow = "1.0.75"

# Cryptography and security
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] } # <-- IMPORTANT: "serde" feature added
sha3 = "0.10.8"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
rand = "0.8.5"
aes-gcm = "0.10.3"
bip39 = "2.1.0"
argon2 = "0.5.3"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
subtle = "2.5.0"
protobuf = { version = "3.4.0", features = ["with-bytes"] }
openssl = { version = "0.10.64", features = ["vendored"] }


# Data handling and serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_bytes = "0.11.14"
toml = "0.8.12"
rocksdb = { version = "0.22.0", default-features = false, features = ["lz4"] }
lru = "0.12.3"
prometheus = { version = "0.13.3", default-features = false, features = ["process"] }
lazy_static = "1.4.0"
once_cell = "1.19.0"
dashmap = "5.5.3"
regex = "1.10.4"
nalgebra = "0.32.5"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
sysinfo = "0.30.11"
rayon = "1.9.0"
zstd = "0.13.1"


# Error handling and CLI
thiserror = "1.0.58"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Rate limiting and backoff
governor = "0.6.3"
nonzero_ext = "0.3.0"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }

# Environment and secrets
dotenvy = "0.15.7"
rpassword = "7.3.1"

# Async traits
async-trait = "0.1.77"
tokio-util = { version = "0.7.10", features = ["compat"] }

# Optional dependencies for ZK proofs and GPU
bellman = { version = "0.14.0", optional = true }
bls12_381 = { version = "0.8.0", optional = true }
ff = { version = "0.13.0", optional = true }
ocl = { version = "0.19.7", optional = true }

[dev-dependencies]
tempfile = "3.10.1" # <-- IMPORTANT: Added for tests
serial_test = "2.0.0"

[features]
default = []
gpu = ["ocl"]
zk = ["bellman", "bls12_381", "ff"]

[lib]
name = "hyperchain"
path = "src/lib.rs"

[[bin]]
name = "hyperchain"
path = "src/main.rs"

[[bin]]
name = "hyperwallet"
path = "src/bin/hyperwallet.rs"

[[bin]]
name = "import_wallet"
path = "src/bin/import_wallet.rs"

[[bin]]
name = "start_node"
path = "src/bin/start_node.rs"

[[bin]]
name = "hyperdag_testnet"
path = "src/hyperdag_testnet.rs"

[[bin]]
name = "keygen"
path = "src/keygen.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[[bin]]
name = "hyperdag_node1"
path = "node1/main.rs"

[[bin]]
name = "hyperdag_node2"
path = "node2/main.rs"

[[bin]]
name = "hyperdag_node3"
path = "node3/main.rs"
